k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rnd-server
  labels:
    name: rnd-server
