k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  type: LoadBalancer
  selector:
    app: nestjs-app
  ports:
    - port: 5000
      targetPort: 5000
